Display read only comments in recruit website

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Web.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Web.config
@@ -21,6 +21,8 @@
         <add namespace="SFA.Apprenticeships.Web.Common.Constants" />
         <add namespace="SFA.Apprenticeships.Web.Common.Framework" />
         <add namespace="SFA.Apprenticeships.Web.Common.Models.Common" />
+        <add namespace="SFA.Apprenticeships.Web.Raa.Common.Views.Shared.EditorTemplates"/>
+        <add namespace="SFA.Apprenticeships.Web.Raa.Common.Views.Shared.DisplayTemplates"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
