--- a/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
@@ -107,11 +107,13 @@
     <Compile Include="Mappers\AddressMapperTests.cs" />
     <Compile Include="Mappers\ApprenticeshipVacancyQueryMapperTests.cs" />
     <Compile Include="Mappers\ApprenticeshipVacancyMapperTests.cs" />
+    <Compile Include="Mappers\EmployerDataMapperTests.cs" />
     <Compile Include="Mappers\VacancyDurationMapperTests.cs" />
     <Compile Include="Mappers\VacancyUploadRequestMapperTests.cs" />
     <Compile Include="Mappers\WageMapperTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByQueryTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByReferenceNumberTests.cs" />
+    <Compile Include="Providers\Version51\VacancyUploadProvider\UploadVacanciesTests.cs" />
     <Compile Include="ServiceImplementation\Version51\ReferenceDataServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceImplementation\Version51\VacancyDetailsServiceTests.cs" />
