--- a/src/SFA.Apprenticeship.Api.AvService/SFA.Apprenticeship.Api.AvService.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService/SFA.Apprenticeship.Api.AvService.csproj
@@ -304,6 +304,12 @@
     <Compile Include="Mappers\Version51\AddressMapper.cs" />
     <Compile Include="Mappers\Version51\ApprenticeshipVacancyMapper.cs" />
     <Compile Include="Mappers\Version51\ApprenticeshipVacancyQueryMapper.cs" />
+    <Compile Include="Mappers\Version51\IAddressMapper.cs" />
+    <Compile Include="Mappers\Version51\IApprenticeshipVacancyMapper.cs" />
+    <Compile Include="Mappers\Version51\IApprenticeshipVacancyQueryMapper.cs" />
+    <Compile Include="Mappers\Version51\IVacancyDurationMapper.cs" />
+    <Compile Include="Mappers\Version51\IVacancyUploadRequestMapper.cs" />
+    <Compile Include="Mappers\Version51\IWageMapper.cs" />
     <Compile Include="Mappers\Version51\VacancyDurationMapper.cs" />
     <Compile Include="Mappers\Version51\VacancyUploadRequestMapper.cs" />
     <Compile Include="Mappers\Version51\WageMapper.cs" />
@@ -380,6 +386,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\Version51\IVacancyDetailsProvider.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider.cs" />
+    <Compile Include="Providers\Version51\VacancyUploadProvider.cs" />
     <Compile Include="ServiceContracts\Version50\IApplicationTracking.cs" />
     <Compile Include="ServiceContracts\Version50\IBulkVacancyUpload.cs" />
     <Compile Include="ServiceContracts\Version50\IReferenceData.cs" />
