Fixed end to end tests.

--- a/src/SFA.Apprenticeships.Web.Manage.EndToEndTests/SFA.Apprenticeships.Web.Manage.EndToEndTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage.EndToEndTests/SFA.Apprenticeships.Web.Manage.EndToEndTests.csproj
@@ -94,6 +94,10 @@
       <HintPath>..\packages\mongocsharpdriver.1.10.0\lib\net35\MongoDB.Driver.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Moq, Version=4.2.1510.2205, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.2.1510.2205\lib\net40\Moq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
     </Reference>
@@ -103,6 +107,10 @@
     </Reference>
     <Reference Include="StructureMap.Net4, Version=3.1.6.186, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\structuremap.3.1.6.186\lib\net40\StructureMap.Net4.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="StructureMap.Web, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\structuremap.web.3.1.0.133\lib\net40\StructureMap.Web.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -142,6 +150,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FakeUserDataProvider.cs" />
     <Compile Include="ManageWebIntegrationTestsBase.cs" />
     <Compile Include="VacancyControllerIntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
