--- a/src/SFA.Apprenticeships.Web.Manage.EndToEndTests/packages.config
+++ b/src/SFA.Apprenticeships.Web.Manage.EndToEndTests/packages.config
@@ -6,5 +6,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="mongocsharpdriver" version="1.10.0" targetFramework="net451" />
+  <package id="Moq" version="4.2.1510.2205" targetFramework="net451" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net451" />
+  <package id="structuremap.web" version="3.1.0.133" targetFramework="net451" />
 </packages>
