--- a/src/SFA.Apprenticeships.Web.Recruit.EndToEndTests/packages.config
+++ b/src/SFA.Apprenticeships.Web.Recruit.EndToEndTests/packages.config
@@ -3,4 +3,5 @@
   <package id="mongocsharpdriver" version="1.10.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.4" targetFramework="net451" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net451" />
+  <package id="structuremap.web" version="3.1.0.133" targetFramework="net451" />
 </packages>
