--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -341,6 +341,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>_LoginPartial.cshtml</DependentUpon>
     </Compile>
+    <Compile Include="Views\VacancyPosting\ConfirmEmployer.generated.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ConfirmEmployer.cshtml</DependentUpon>
+    </Compile>
     <Compile Include="Views\VacancyPosting\CreateVacancy.generated.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -457,7 +462,10 @@
     <Content Include="Views\VacancyPosting\VacancySubmitted.cshtml" />
     <Content Include="Views\VacancyPosting\SelectEmployer.cshtml" />
     <Content Include="Views\VacancyPosting\AddEmployer.cshtml" />
-    <Content Include="Views\VacancyPosting\ConfirmEmployer.cshtml" />
+    <Content Include="Views\VacancyPosting\ConfirmEmployer.cshtml">
+      <Generator>RazorGenerator</Generator>
+      <LastGenOutput>ConfirmEmployer.generated.cs</LastGenOutput>
+    </Content>
     <Content Include="Views\VacancyPosting\VacancyQuestions.cshtml">
       <Generator>RazorGenerator</Generator>
       <LastGenOutput>VacancyQuestions.generated.cs</LastGenOutput>
