--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -502,6 +502,7 @@
     </Content>
     <Content Include="Content\_assets\scss\_components.scss" />
     <Content Include="Content\_assets\scss\_modules.scss" />
+    <Content Include="Views\VacancyPosting\Locations.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
