--- a/src/SFA.WebProxy/Web.config
+++ b/src/SFA.WebProxy/Web.config
@@ -7,9 +7,10 @@
   <appSettings>
     <add key="AreNonPrimaryRequestsEnabled" value="True"/>
     <add key="IsLoggingEnabled" value="True"/>
-    <add key="CompatabilityWebServiceRootUrl" value="http://sfa-service-sit.cloudapp.net"/>
+    <add key="CompatabilityWebServiceRootUrl" value="http://sfa-service-dev.cloudapp.net"/>
     <add key="FileProxyLoggingRootPath" value="C:\WebProxy"/>
     <add key="AzureStorageConnectionString" value="UseDevelopmentStorage=true"/>
+    <add key="UseSandboxApi" value="False"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2">
