included scss file in manage project that Kali forgot

--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -482,6 +482,7 @@
     </Content>
     <Content Include="Content\_assets\scss\_components.scss" />
     <Content Include="Content\_assets\scss\_modules.scss" />
+    <Content Include="Content\_assets\scss\modules\_vacancy.scss" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
