Using sandbox url

--- a/src/SFA.WebProxy/Web.config
+++ b/src/SFA.WebProxy/Web.config
@@ -7,6 +7,8 @@
   <appSettings>
     <add key="AreNonPrimaryRequestsEnabled" value="True"/>
     <add key="IsLoggingEnabled" value="True"/>
+    <add key="NasAvWebServiceRootUri" value="https://apprenticeshipvacancymatchingservice.lsc.gov.uk"/>
+    <add key="NasAvWebServiceSandboxRootUri" value="https://apprenticeshipvacancymatchingservice.lsc.gov.uk"/>
     <add key="CompatabilityWebServiceRootUrl" value="http://sfa-service-dev.cloudapp.net"/>
     <add key="FileProxyLoggingRootPath" value="C:\WebProxy"/>
     <add key="AzureStorageConnectionString" value="UseDevelopmentStorage=true"/>
