--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -328,6 +328,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CommentViewModel.cs" />
+    <Compile Include="ViewModels\EditLinkViewModel.cs" />
     <Compile Include="ViewModels\ValidationResultViewModel.cs" />
     <Compile Include="Views\Shared\EditorTemplates\DateViewModel.generated.cs">
       <DependentUpon>DateViewModel.cshtml</DependentUpon>
@@ -511,6 +512,7 @@
     <Content Include="Content\_assets\scss\modules\_vacancy.scss" />
     <Content Include="Views\VacancyPosting\_CommentIcon.cshtml" />
     <Content Include="Views\VacancyPosting\_ValidationResultIcons.cshtml" />
+    <Content Include="Views\VacancyPosting\_EditLink.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
