--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -483,6 +483,9 @@
     <Content Include="Content\_assets\scss\_components.scss" />
     <Content Include="Content\_assets\scss\_modules.scss" />
     <Content Include="Content\_assets\scss\modules\_vacancy.scss" />
+    <Content Include="Views\Vacancy\_CommentIcon.cshtml" />
+    <Content Include="Views\Vacancy\_EditLink.cshtml" />
+    <Content Include="Views\Vacancy\_ValidationResultIcons.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
