US872: API: vacancy upload mapping (wip).

--- a/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
@@ -114,7 +114,7 @@
     <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByQueryTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByReferenceNumberTests.cs" />
     <Compile Include="Providers\Version51\VacancyUploadProvider\ArgumentTests.cs" />
-    <Compile Include="Providers\Version51\VacancyUploadProvider\Builders\VacancyUploadDataBuilder.cs" />
+    <Compile Include="Builders\VacancyUploadDataBuilder.cs" />
     <Compile Include="Providers\Version51\VacancyUploadProvider\InvalidVacancyUploadDataTests.cs" />
     <Compile Include="Providers\Version51\VacancyUploadProvider\UploadVacanciesTests.cs" />
     <Compile Include="Providers\Version51\VacancyUploadProvider\Extensions\VacancyUploadResultDataExtensions.cs" />
