--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Mediators\ProviderUser\UpdateUserTests.cs" />
     <Compile Include="Mediators\Provider\ProviderMediatorTests.cs" />
     <Compile Include="Mediators\VacancyPosting\PreviewVacancyTests.cs" />
+    <Compile Include="Mediators\VacancyPosting\CloneVacancyTests.cs" />
     <Compile Include="Mediators\VacancyPosting\SubmitVacancyTests.cs" />
     <Compile Include="Providers\VacancyPosting\CloneVacancyTests.cs" />
     <Compile Include="Mediators\VacancyPosting\CreateVacancyTests.cs" />
