--- a/src/SFA.Apprenticeships.Infrastructure.ScheduledJobs/SFA.Apprenticeships.Infrastructure.ScheduledJobs.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.ScheduledJobs/SFA.Apprenticeships.Infrastructure.ScheduledJobs.csproj
@@ -325,6 +325,10 @@
       <Project>{D1BC4A28-A7AB-475E-B73E-5564897550BA}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Processes</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Raa\SFA.Apprenticeships.Infrastructure.Raa.csproj">
+      <Project>{1F4776F3-884B-4B00-BA97-22BFA06C034E}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Raa</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Applications\SFA.Apprenticeships.Infrastructure.Repositories.Applications.csproj">
       <Project>{91822365-711D-4976-AD7F-069063D8B487}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Repositories.Applications</Name>
@@ -344,6 +348,10 @@
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Users\SFA.Apprenticeships.Infrastructure.Repositories.Users.csproj">
       <Project>{4696D786-2F3C-4A12-BD6B-38E2981D6DF1}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Repositories.Users</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Vacancies\SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.csproj">
+      <Project>{A3B35EFD-CD80-4366-A857-788EADD145A9}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Vacancies</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.VacancyIndexer\SFA.Apprenticeships.Infrastructure.VacancyIndexer.csproj">
       <Project>{02d19199-a4bb-484a-aa48-208c7b6d819f}</Project>
