--- a/src/SFA.Apprenticeships.Infrastructure.Monitor/SFA.Apprenticeships.Infrastructure.Monitor.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Monitor/SFA.Apprenticeships.Infrastructure.Monitor.csproj
@@ -383,6 +383,10 @@
       <Project>{ABD48D09-C35E-42CE-8A4D-81550C2B8554}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Postcode</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Raa\SFA.Apprenticeships.Infrastructure.Raa.csproj">
+      <Project>{1F4776F3-884B-4B00-BA97-22BFA06C034E}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Raa</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Applications\SFA.Apprenticeships.Infrastructure.Repositories.Applications.csproj">
       <Project>{91822365-711D-4976-AD7F-069063D8B487}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Repositories.Applications</Name>
