Application counts correctly reported back to recruit

--- a/src/SFA.Apprenticeships.Infrastructure.LegacyWebServices/SFA.Apprenticeships.Infrastructure.LegacyWebServices.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.LegacyWebServices/SFA.Apprenticeships.Infrastructure.LegacyWebServices.csproj
@@ -266,6 +266,10 @@
       <Project>{78B1F2A1-DCC3-4ED3-8CE0-16E0781B59FA}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Presentation\SFA.Apprenticeships.Infrastructure.Presentation.csproj">
+      <Project>{83500887-E1B7-46BD-945B-4CC3D0069B6E}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Presentation</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
