Configurable regex for automatic and configurable routing

--- a/src/SFA.WebProxy/Web.config
+++ b/src/SFA.WebProxy/Web.config
@@ -8,10 +8,11 @@
     <add key="AreNonPrimaryRequestsEnabled" value="True"/>
     <add key="IsLoggingEnabled" value="True"/>
     <add key="NasAvWebServiceRootUri" value="https://apprenticeshipvacancymatchingservice.lsc.gov.uk"/>
-    <add key="CompatabilityWebServiceRootUrl" value="http://sfa-service-dev.cloudapp.net"/>
+    <add key="CompatabilityWebServiceRootUri" value="http://sfa-service-dev.cloudapp.net"/>
+    <add key="AutomaticRouteToCompatabilityWebServiceRegex" value="^.+?\/(ReferenceData51\.svc|VacancyDetails51\.svc|VacancySummary51\.svc)$"/>
+    <add key="ConfigurableRouteToCompatabilityWebServiceRegex" value="^.+?\/(ApplicationTracking51\.svc|VacancyManagement51\.svc)$"/>
     <add key="FileProxyLoggingRootPath" value="C:\WebProxy"/>
     <add key="AzureStorageConnectionString" value="UseDevelopmentStorage=true"/>
-    <add key="UseSandboxApi" value="False"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2">
