--- a/src/SFA.WebProxy/Web.config
+++ b/src/SFA.WebProxy/Web.config
@@ -9,10 +9,10 @@
     <add key="IsLoggingEnabled" value="True"/>
     <add key="NasAvWebServiceRootUri" value="https://apprenticeshipvacancymatchingservice.lsc.gov.uk"/>
     <add key="CompatabilityWebServiceRootUri" value="http://sfa-service-dev.cloudapp.net"/>
-    <add key="AutomaticRouteToCompatabilityWebServiceRegex" value="^.+?\/(ReferenceData51\.svc|VacancyDetails51\.svc|VacancySummary51\.svc)$"/>
-    <add key="ConfigurableRouteToCompatabilityWebServiceRegex" value="^.+?\/(ApplicationTracking51\.svc|VacancyManagement51\.svc)$"/>
+    <add key="AutomaticRouteToCompatabilityWebServiceRegex" value=""/>
     <add key="FileProxyLoggingRootPath" value="C:\WebProxy"/>
     <add key="AzureStorageConnectionString" value="UseDevelopmentStorage=true"/>
+    <add key="SqlServerConnectionString" value="Data Source=(local)\SQLEXPRESS;Database=SFA.Apprenticeships.Data.Reference;Integrated Security=True;Pooling=False"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2">
