--- a/src/SFA.WebProxy/SFA.WebProxy.csproj
+++ b/src/SFA.WebProxy/SFA.WebProxy.csproj
@@ -43,6 +43,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=1.40.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Azure.KeyVault.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Azure.KeyVault.Core.1.0.0\lib\net40\Microsoft.Azure.KeyVault.Core.dll</HintPath>
       <Private>True</Private>
@@ -110,6 +114,9 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\WebProxyConsumer.cs" />
+    <Compile Include="Repositories\IWebProxyUserRepository.cs" />
+    <Compile Include="Repositories\SqlServerWebProxyUserRepository.cs" />
     <Compile Include="Routing\ProxyRouting.cs" />
     <Compile Include="Routing\IProxyRouting.cs" />
     <Compile Include="Configuration\ConfigurationManagerConfiguration.cs" />
@@ -143,7 +150,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
