Updating connection string to point to local data source

--- a/src/SFA.WebProxy/Web.config
+++ b/src/SFA.WebProxy/Web.config
@@ -12,7 +12,7 @@
     <add key="AutomaticRouteToCompatabilityWebServiceRegex" value=""/>
     <add key="FileProxyLoggingRootPath" value="C:\WebProxy"/>
     <add key="AzureStorageConnectionString" value="UseDevelopmentStorage=true"/>
-    <add key="SqlServerConnectionString" value="Data Source=(local)\SQLEXPRESS;Database=SFA.Apprenticeships.Data.Reference;Integrated Security=True;Pooling=False"/>
+    <add key="SqlServerConnectionString" value="Data Source=(local)\SQLEXPRESS;Database=Raa;Integrated Security=True;Pooling=False"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2">
