Adding caching layer for config andrepositories

--- a/src/SFA.WebProxy/Web.config
+++ b/src/SFA.WebProxy/Web.config
@@ -13,6 +13,7 @@
     <add key="FileProxyLoggingRootPath" value="C:\WebProxy"/>
     <add key="AzureStorageConnectionString" value="UseDevelopmentStorage=true"/>
     <add key="SqlServerConnectionString" value="Data Source=(local)\SQLEXPRESS;Database=Raa;Integrated Security=True;Pooling=False"/>
+    <add key="CacheDurationInSeconds" value="30"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2">
