--- a/src/SFA.WebProxy/SFA.WebProxy.csproj
+++ b/src/SFA.WebProxy/SFA.WebProxy.csproj
@@ -77,6 +77,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Spatial, Version=5.6.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Spatial.5.6.4\lib\net40\System.Spatial.dll</HintPath>
       <Private>True</Private>
@@ -114,6 +115,9 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Repositories\CachedWebProxyUserRepository.cs" />
+    <Compile Include="Service\ICacheService.cs" />
+    <Compile Include="Configuration\CachedConfiguration.cs" />
     <Compile Include="Models\WebProxyConsumer.cs" />
     <Compile Include="Repositories\IWebProxyUserRepository.cs" />
     <Compile Include="Repositories\SqlServerWebProxyUserRepository.cs" />
@@ -138,6 +142,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="App_Start\ProxyHandler.cs" />
     <Compile Include="Routing\IRoutingConfiguration.cs" />
+    <Compile Include="Service\MemoryCacheService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
